# internal/controller/nbi/federationManagementController.go
@@ -90,7 +90,7 @@ func (fmc *FederationManagementController) InitiateFederationController(c *gin.C
 
 	// send federation request to other federator and unmarshal response
 	var federationResponseData models.FederationResponseData
-	err := httpClient.PostJSONWithAuthAndUnmarshal(c, "/federation/v1/partner", federationRequestData, &federationResponseData)
+	err := httpClient.HttpRequestWithAuthAndUnmarshal(c, http.MethodPost, "/federation/v1/partner", federationRequestData, &federationResponseData)
 	if err != nil {
 		problemDetails := utils.NewProblemDetails(http.StatusInternalServerError)
 		problemDetails.Detail = err.Error()
@@ -125,6 +125,16 @@ func (fmc *FederationManagementController) InitiateFederationController(c *gin.C
 	c.JSON(http.StatusOK, federationResponseData)
 }
 
+// @Summary Remove Federation Relationship
+// @Description Removes a previously established federation relationship by its federationContextId
+// @Tags NBI - FederationManagement
+// @Accept json
+// @Produce json
+// @Param federationContextId path string true "Federation Context ID"
+// @Success 200 {object} map[string]string "status: Federation removed successfully"
+// @Failure 400 {object} models.ProblemDetails "federationContextId must be provided"
+// @Failure 500 {object} models.ProblemDetails "Internal Server Error"
+// @Router /nbi/federation/v1/{federationContextId}/partner [delete]
 func (fmc *FederationManagementController) RemoveFederationController(c *gin.Context) {
 	log.Print("RemoveFederationController - Removing federation")
 
@@ -152,7 +162,11 @@ func (fmc *FederationManagementController) RemoveFederationController(c *gin.Con
 	log.Print("RemoveFederationController - Sending Federation Removal Request to Partner")
 
 	// send federation removal request to other federator
-	resp, err := httpClient.DeleteWithAuth(c, "/federation/v1/"+federationContextId+"/partner")
+	resp, err := httpClient.HttpRequestWithAuth(
+		c,
+		http.MethodDelete,
+		"/federation/v1/"+federationContextId+"/partner",
+		nil)
 	if err != nil {
 		problemDetails := utils.NewProblemDetails(http.StatusInternalServerError)
 		problemDetails.Detail = err.Error()
@@ -173,4 +187,135 @@ func (fmc *FederationManagementController) RemoveFederationController(c *gin.Con
 	log.Print("RemoveFederationController - Federation removed successfully")
 
 	c.JSON(http.StatusOK, gin.H{"message": "Federation removed successfully"})
+}
+
+// @Summary Get Federation Meta Info from partner
+// @Description Retrieves federation information from the partner federator
+// @Tags NBI - FederationManagement
+// @Accept json
+// @Produce json
+// @Param federationContextId path string true "Federation Context ID"
+// @Success 200 {object} models.FederationHealthInfo
+// @Failure 400 {object} models.ProblemDetails "federationContextId must be provided"
+// @Failure 404 {object} models.ProblemDetails "Federation not found"
+// @Failure 500 {object} models.ProblemDetails "Internal Server Error"
+// @Router /nbi/federation/v1/{federationContextId}/partner [get]
+func (fmc *FederationManagementController) GetFederationMetaInfoController(c *gin.Context) {
+	log.Print("GetFederationMetaInfoController - Getting federation meta info from partner")
+
+	// get federation context id from request
+	federationContextId := c.Param("federationContextId")
+	if federationContextId == "" {
+		problemDetails := utils.NewProblemDetails(http.StatusBadRequest)
+		problemDetails.Detail = "federationContextId must be provided"
+		c.JSON(http.StatusBadRequest, problemDetails)
+		return
+	}
+
+	log.Print("GetFederationMetaInfoController - Checking if federation exists")
+
+	// check if federation exists
+	if !fmc.federationService.ExistsFederationWithContextId(federationContextId) {
+		problemDetails := utils.NewProblemDetails(http.StatusNotFound)
+		problemDetails.Detail = "Federation not found"
+		c.JSON(http.StatusNotFound, problemDetails)
+		return
+	}
+
+	log.Print("GetFederationMetaInfoController - Getting HttpClient for Federation")
+
+	// get http client for federation
+	httpClient, err := fmc.federationHttpClientManager.Get(federationContextId)
+	if err != nil {
+		problemDetails := utils.NewProblemDetails(http.StatusInternalServerError)
+		problemDetails.Detail = "No http client found with the given federationContextId"
+		c.JSON(http.StatusInternalServerError, problemDetails)
+		return
+	}
+
+	log.Print("GetFederationMetaInfoController - Sending meta info request to partner")
+
+	// send meta info request to other federator
+	var metaInfo models.FederationMetaInfo
+	err = httpClient.HttpRequestWithAuthAndUnmarshal(
+		c,
+		http.MethodGet,
+		"/federation/v1/"+federationContextId+"/partner",
+		nil,
+		&metaInfo)
+	if err != nil {
+		problemDetails := utils.NewProblemDetails(http.StatusInternalServerError)
+		problemDetails.Detail = err.Error()
+		c.JSON(http.StatusInternalServerError, problemDetails)
+		return
+	}
+
+	log.Print("GetFederationMetaInfoController - Federation meta info retrieved successfully")
+}
+
+// @Summary Get Federation Health Info
+// @Description Retrieves the health information of the federation partner
+// @Tags NBI - FederationManagement
+// @Accept json
+// @Produce json
+// @Param federationContextId path string true "Federation Context ID"
+// @Success 200 {object} models.FederationHealthInfo
+// @Failure 400 {object} models.ProblemDetails "federationContextId must be provided"
+// @Failure 404 {object} models.ProblemDetails "Federation not found"
+// @Failure 500 {object} models.ProblemDetails "Internal Server Error"
+// @Router /nbi/federation/v1/{federationContextId}/health [get]
+func (fmc *FederationManagementController) GetFederationHealthController(c *gin.Context) {
+	log.Print("GetFederationHealthController - Getting federation health info")
+
+	// get federation context id from request
+	federationContextId := c.Param("federationContextId")
+
+	if federationContextId == "" {
+		problemDetails := utils.NewProblemDetails(http.StatusBadRequest)
+		problemDetails.Detail = "federationContextId must be provided"
+		c.JSON(http.StatusBadRequest, problemDetails)
+		return
+	}
+
+	log.Print("GetFederationHealthController - Checking if federation exists")
+
+	// check if federation exists
+	if !fmc.federationService.ExistsFederationWithContextId(federationContextId) {
+		problemDetails := utils.NewProblemDetails(http.StatusNotFound)
+		problemDetails.Detail = "Federation not found"
+		c.JSON(http.StatusNotFound, problemDetails)
+		return
+	}
+
+	log.Print("GetFederationHealthController - Getting HttpClient for Federation")
+
+	// get http client for federation
+	httpClient, err := fmc.federationHttpClientManager.Get(federationContextId)
+	if err != nil {
+		problemDetails := utils.NewProblemDetails(http.StatusInternalServerError)
+		problemDetails.Detail = "No http client found with the given federationContextId"
+		c.JSON(http.StatusInternalServerError, problemDetails)
+		return
+	}
+
+	log.Print("GetFederationHealthController - Sending health check request to partner")
+
+	// send health check request to other federator
+	var healthInfo models.FederationHealthInfo
+	err = httpClient.HttpRequestWithAuthAndUnmarshal(
+		c,
+		http.MethodGet,
+		"/federation/v1/"+federationContextId+"/health",
+		nil,
+		&healthInfo)
+	if err != nil {
+		problemDetails := utils.NewProblemDetails(http.StatusInternalServerError)
+		problemDetails.Detail = err.Error()
+		c.JSON(http.StatusInternalServerError, problemDetails)
+		return
+	}
+
+	log.Print("GetFederationHealthController - Federation health info retrieved successfully")
+
+	c.JSON(http.StatusOK, healthInfo)
 }
