# internal/router/ewbiRoutes.go
@@ -10,12 +10,21 @@ func initEwbiFederationManagementRoutes(router *gin.Engine, svcs *Services, auth
 	// FederationManagement - Create and manage directed federation relationship with a partner OP
 	FederationManagement := router.Group("/federation/v1", authMiddleware)
 
-	FederationManagement.POST("/partner", federationManagementController.CreateFederationController)
-	FederationManagement.DELETE("/:federationContextId/partner", federationManagementController.RemoveFederationRelationshipController)
-	FederationManagement.GET("/:federationContextId/partner", federationManagementController.GetFederationMetaInfoController)
-	FederationManagement.PATCH("/:federationContextId/partner", federationManagementController.UpdateFederationController)
-	// FederationManagement.GET("/fed-context-id", controller.GetFederationContextId)
-	// FederationManagement.GET("/:federationContextId/health", controller.GetFederationHealth)
+	FederationManagement.POST(
+		"/partner",
+		federationManagementController.CreateFederationController)
+	FederationManagement.DELETE(
+		"/:federationContextId/partner",
+		federationManagementController.RemoveFederationRelationshipController)
+	FederationManagement.GET(
+		"/:federationContextId/partner",
+		federationManagementController.GetFederationMetaInfoController)
+	FederationManagement.PATCH(
+		"/:federationContextId/partner",
+		federationManagementController.UpdateFederationController)
+	FederationManagement.GET(
+		"/:federationContextId/health",
+		federationManagementController.GetFederationHealthController)
 	// FederationManagement.POST("/:federationContextId/renew", controller.PostFederationRenew)
 	// FederationManagement.GET("/:federationContextId/platform-caps", controller.GetFederationPlatformCaps)
 }
