# internal/router/nbiRoutes.go
@@ -6,14 +6,23 @@ import (
 )
 
 func initNbiFederationManagementRoutes(router *gin.Engine, svcs *Services) {
-	federationManagementController := nbi.NewFederationManagementController(svcs.FederationService, svcs.FederationHttpClientManager)
+	federationManagementController := nbi.NewFederationManagementController(
+		svcs.FederationService,
+		svcs.FederationHttpClientManager,
+	)
 	// FederationManagement - Create and manage directed federation relationship with a partner OP
 	FederationManagement := router.Group("/nbi/federation/v1")
 
-	FederationManagement.POST("/partner", federationManagementController.InitiateFederationController)
-	// FederationManagement.GET("/fed-context-id", controller.GetFederationContextId)
-	// FederationManagement.GET("/:federationContextId/health", controller.GetFederationHealth)
-	// FederationManagement.POST("/:federationContextId/renew", controller.PostFederationRenew)
-	// FederationManagement.GET("/:federationContextId/platform-caps", controller.GetFederationPlatformCaps)
-	FederationManagement.DELETE("/:federationContextId/partner", federationManagementController.RemoveFederationController)
+	FederationManagement.POST(
+		"/partner",
+		federationManagementController.InitiateFederationController)
+	FederationManagement.GET(
+		"/:federationContextId/partner",
+		federationManagementController.GetFederationMetaInfoController)
+	FederationManagement.DELETE(
+		"/:federationContextId/partner",
+		federationManagementController.RemoveFederationController)
+	FederationManagement.GET(
+		"/:federationContextId/health",
+		federationManagementController.GetFederationHealthController)
 }
